# xmrig-cuda

./: CMakeLists.txt  README.md
.github/workflows/: deploy.yml  test.yml
cmake/: CUDA-Version.cmake  CUDA.cmake
src/: cryptonight.h  cuda_core.cu  cuda_cryptonight_gpu.hpp  cuda_extra.cu  version.h  xmrig-cuda.cpp
src/AstroBWT/dero/: AstroBWT.cu
src/RandomX/: hash.hpp
src/RandomX/defyx/: configuration.h  randomx_defyx.cu
src/crypto/cn/: CnAlgo.h
src/crypto/common/: Algorithm.cpp  Algorithm.h
